[package]
name = "wasm-explorer"
version = "0.1.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
id-arena = "2.2.1"
walrus = { version = "0.23.3", features = ["parallel"] }
wasmprinter = "0.222.0"
rustc-demangle = "0.1.24"
anyhow = "1.0.95"
itertools = "0.13.0"
wasm-encoder = { version = "0.206.0", features = ["wasmparser"] }
wasmparser = "0.206.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
